--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ name = "mecs"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+thiserror = "1.0.50"
