--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0-alpha.1"
 edition = "2021"
 license = "MIT"
 description = "Entity-Component-System for the Magma3D game engine"
+homepage = "https://dynamicgoose.github.io/magma3d-engine/"
 repository = "https://github.com/DynamicGoose/mecs"
 
 [dependencies]
